browser/css/jsdialogs.css
/* ... */
#glowframe > div.ui-frame.jsdialog.sidebar > label,
#softedgeframe > div.ui-frame.jsdialog.sidebar > label {
	color: var(--color-main-text);
	font-size: var(--header-font-size);
	line-height: var(--header-height);
	margin: 4px;
}

#accessibilityCheckBox .jsdialog.ui-text {
	margin: 0;
	padding-inline-end: 112px;
	color: var(--color-main-text);
	font-size: var(--default-font-size);
	text-transform: none;
}

*:not(.modalpopup) > .lokdialog_container.ui-dialog.ui-widget-content, .autofilter-container {
	border: 1px solid var(--color-border-darker);
	-webkit-box-shadow: 0 0 3px var(--color-border-darker);
	box-shadow: 0 0 3px var(--color-border-darker);
	border-radius: var(--border-radius);
	background: var(--color-background-darker);
}

.jsdialog.row {
	display: table-row;
}

.jsdialog.cell {
	display: table-cell;
	vertical-align: middle;
}

.jsdialog.vertical:not(.sidebar):not(.ui-separator) {
	width: 100%;
}

th.jsdialog:not(:first-child) {
	padding-inline-end: 24px;
}

th.jsdialog {
	text-align: start;
}

.jsdialog.vertical:not([id^='table-dialog-action_area']) > .jsdialog.row,
td.jsdialog > [id^='table-box']:not(.sidebar) {
	display: table;
	width: 100%;
}

.jsdialog.ui-alignment {
	margin: 0px;
	display: block;
}

.jsdialog.ui-grid {
	border-spacing: 0px;
	width: 100%;
	display: grid;
	grid-gap: 4px;
}

/* Special Characters dialog */
#SpecialCharactersDialog #viewgrid,
#SpecialCharactersDialog #favgrid {
	grid-gap: 4px;
	width: fit-content;
}

/* Find and replace dialog */
#search_grid, #replace_grid {
	grid-template-columns: minmax(100px, min-content) auto !important;
}
#searchframe input[type='checkbox'] {
	margin-inline-start: 0;
}

/* keep structure with hidden elements correct */

.ui-grid > .hidden {
	visibility: hidden;
	display: initial !important;
	/* don't occupy space showing empty area */
	width: 0px !important;
	height: 0px !important;
	margin: 0px !important;
	padding: 0px !important;
}

/* Page number dialog placed under Insert menu */
#PageNumberDialog #rightVBox,
#PageNumberDialog #leftVBox {
	display: flex;
	flex-direction: column;
	margin: 5px;
}

/* Scrollwindow - used eg. in accessibility check in writer */
.jsdialog.ui-scrollwindow:not(.formulabar) {
	overflow: auto;
	max-height: 500px;
	max-width: 700px;
}
/* - Also used in SpellingDialog where suggestion come in form
     of an image*/
.jsdialog.ui-scrollwindow.has-ui-drawing-area {
	width: max-content;
}

/* AccessibilityCheckDialog hack to prevent huge height in Firefox */
#AccessibilityCheckDialog .cell {
	vertical-align: unset !important;
}

/* Separator */

.jsdialog:focus-visible + .jsdialog.ui-separator.vertical {
	background-color: transparent;
}
.jsdialog.ui-separator.vertical {
	margin: 5px 0px;
	padding-right: 1px;
	background-color: var(--color-background-darker);
}

.ui-toolbar .ui-separator.vertical {
	height: 14px;
	align-self: center;
}

.jsdialog.ui-separator.horizontal {
	margin: 0px;
	background-color: var(--color-border-lighter);
	border: none;
	height: 1px;
}

/* Badge */
.ui-badge {
	padding: 5px !important;
	background-color: var(--color-background-darker);
	border-width: 0px;
	border-radius: var(--border-radius);
	font-family: var(--cool-font);
	font-size: var(--default-font-size);
	font-weight: normal;
}

#toolbar-down .ui-separator.vertical {
	background-color: var(--color-status-badge);
	opacity: 0.2;
}

#toolbar-down .ui-badge,
#toolbar-down .unolabel {
	font-family: var(--cool-font);
	font-size: var(--default-font-size);
	color: var(--color-status-badge) !important;
}

#toolbar-down .ui-badge:hover,
#toolbar-down .menubutton:hover .unolabel {
	color: var(--color-main-text) !important;
}

#toolbar-down .unoarrow {
	border-top-color: var(--color-status-badge);
}

#toolbar-down .menubutton:hover .unoarrow {
	border-top-color: var(--color-main-text);
}
/* Tabs */

.ui-tabs-content.jsdialog {
	display: grid;
}

.ui-tabs-content.jsdialog > .ui-content {
	grid-row: 1;
	grid-column: 1;
	display: flex;
	justify-items: stretch;
	align-items: stretch;
}

.ui-tabs-content.jsdialog > .ui-content.hidden {
	display: inherit !important;
	visibility: hidden;
}

.ui-tabpage.jsdialog {
	width: 100%;
	height: 100%;
}

.ui-tab.jsdialog {
	float: left !important;
	font-size: var(--default-font-size) !important;
	font-family: var(--cool-font) !important;
	line-height: normal !important;
	color: dimgray !important;
	color: var(--color-text-dark) !important;
	height: 24px !important;
	display: flex !important;
	align-items: center !important;
	padding: 0px 1em !important;
	border: solid 1px transparent !important;
	border-radius: var(--border-radius) !important;
	background-color: var(--color-main-background) !important;
	margin-inline-end: 12px !important;
	margin-bottom: 6px;
}

.ui-tab.hidden.jsdialog {
	visibility: hidden !important;
}

.ui-tab.selected.jsdialog {
	background-color: var(--color-background-lighter) !important;
	color: var(--color-text-darker) !important;
	box-shadow: 0 0 2px 1px var(--color-box-shadow) !important;
}

.ui-tab.jsdialog:not(.selected):hover {
	cursor: pointer !important;
	background-color: var(--color-background-darker) !important;
	color: var(--color-text-darker) !important;
}

/* Expander */

.jsdialog.ui-expander {
	box-shadow: 0 1px 0px 0 var(--color-border-lighter);
}

#options.ui-expander {
	margin-top: 8px;
}

.ui-expander-label {
	color: #666;
}

.ui-expander-label::before,
.ui-treeview-expandable.collapsed > .ui-treeview-expander::before,
.ui-treeview tr[aria-expanded='false'] > td > .ui-treeview-expander::before {
	display: inline-block;
	content: 'V';
	color: transparent;
	margin-inline-end: 7px;
	background: transparent url('images/lc_menu_chevron.svg') no-repeat center right;
	filter: brightness(0.5);
}
/* ... */

